fix: rider & category
